--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: My First Blog
+author: Yash 
+email: yash.solanki@rapidops.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is my First blog.Warm welcome to my blog.
 
 # social links
 twitter_username: your-twitter-handle
-github_username:  your-github-handle
+github_username:  yash-solanki
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-leap-day
+theme: minima
